Fix issue with POST data.